# python_module

projet/py_03/ex4/: ft_inventory_system.py
projet/py_03/ex5/: ft_data_stream.py
projet/py_03/ex6/: ft_data_alchemist.py
projet/py_04/ex0/: ex.txt  ft_ancient_text.py
projet/py_04/ex1/: ft_archive_creation.py
projet/py_04/ex2/: ft_stream_management.py
projet/py_04/ex3/: ft_vault_security.py
projet/py_05/ex0/: data_processor.py
projet/py_05/ex1/: data_stream.py
projet/py_05/ex2/: data_pipeline.py
projet/py_06/: ft_alembic_2.py  ft_alembic_4.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
projet/py_06/alchemy/: __init__.py  potions.py
projet/py_06/alchemy/grimoire/: __init__.py  dark_spellbook.py  dark_validator.py  light_spellbook.py  (+1 more)
projet/py_07/ex0/: __init__.py  battle.py  creatures.py  factories.py
projet/py_07/ex1/: __init__.py  capabilities.py  capacitor.py  creatures.py  factories.py
projet/py_07/ex2/: __init__.py  strategies.py  tournament.py
projet/py_08/ex0/: construct.py
projet/py_08/ex1/: loading.py  pyproject.toml
projet/py_08/ex2/: env.example  gitignore  oracle.py
projet/py_09/ex0/: space_station.py
projet/py_09/ex1/: alien_contact.py
projet/py_09/ex2/: space_crew.py
projet/py_10/: EXPLICATIONS.md  GUIDE_COMPLET.pdf.md
projet/py_10/ex0/: lambda_spells.py
projet/py_10/ex1/: higher_magic.py
projet/py_10/ex2/: functools_artifacts.py
projet/py_10/ex3/: scope_mysteries.py
projet/py_10/ex4/: decorator_mastery.py
(+2 files in other folders)
