[tool.poetry]
name = "matrix-loading"
version = "1.0.0"
description = "Matrix data analysis pipeline"
authors = ["Student <student@42.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
matplotlib = ">=3.7.0"
requests = { version = ">=2.31.0", optional = true }

[tool.poetry.extras]
network = ["requests"]

[tool.poetry.group.dev.dependencies]
flake8 = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
